# daves-vibe-kanban

./: .env.bak  .env.example  Cargo.toml  README.md  local-build.sh  package.json  pnpm-lock.yaml  vibe-kanban-dev.sh
.github/workflows/: pre-release.yml
crates/api-types/src/: oauth.rs
crates/db/migrations/: 20260415201200_add_local_kanban_schema.sql  20260415201300_enrich_kanban_organizations.sql  20260415201400_add_followers_and_reactions.sql  20260416000100_migrate_legacy_kanban_data.sql
crates/db/src/models/: kanban.rs
crates/deployment/: Cargo.toml
crates/deployment/src/: lib.rs
crates/executors/: Cargo.toml  default_profiles.json
crates/executors/src/: env.rs  mcp_config.rs
crates/executors/src/executors/: kimi.rs  mod.rs  opencode.rs
crates/local-deployment/: Cargo.toml
crates/local-deployment/src/: container.rs  lib.rs
crates/review/src/: main.rs
crates/server/: Cargo.toml  build.rs
crates/server/src/: error.rs  main.rs
crates/server/src/middleware/: origin.rs
crates/server/src/routes/: config.rs  mod.rs  oauth.rs
crates/services/: Cargo.toml
crates/services/src/services/: analytics.rs  container.rs  diff_stream.rs  file_ranker.rs  file_search.rs  filesystem_watcher.rs  mod.rs  repo.rs
crates/tauri-app/src/: main.rs
crates/utils/src/: assets.rs  env_config.rs  lib.rs
crates/workspace-manager/: Cargo.toml
crates/workspace-manager/src/: lib.rs  workspace_manager.rs
crates/worktree-manager/src/: worktree_manager.rs
npx-cli/src/: cli.ts  download.ts
shared/: types.ts
shared/schemas/: kimi_code.json
(+25 files in other folders)
