[package]
name = "deployment"
version = "0.1.44"
edition = "2024"

[dependencies]
db = { path = "../db" }
utils = { path = "../utils" }
services = { path = "../services" }
executors = { path = "../executors" }
async-trait = { workspace = true } 
thiserror = { workspace = true } 
anyhow = { workspace = true }
relay-control = { path = "../relay-control" }
relay-hosts = { path = "../relay-hosts" }
trusted-key-auth = { path = "../trusted-key-auth" }
client-info = { path = "../client-info" }
remote-info = { path = "../remote-info" }
preview-proxy = { path = "../preview-proxy" }
tokio = { workspace = true }
sqlx = "0.8.6"
serde_json = { workspace = true }
futures = "0.3.31"
axum = { workspace = true }
tokio-util = { version = "0.7" }
