[package]
name = "workspace-manager"
version = "0.1.42"
edition = "2024"

[dependencies]
db = { path = "../db" }
utils = { path = "../utils" }
dirs = "5.0"
sqlx = "0.8.6"
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { version = "1.0", features = ["v4", "serde"] }
